--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "composer/installers": "^1.9",
         "drupal/adminimal_admin_toolbar": "^1.11",
         "drupal/adminimal_theme": "^1.6",
+        "drupal/bootstrap_sass": "^5.0",
         "drupal/core-composer-scaffold": "^9",
         "drupal/core-project-message": "^9",
         "drupal/core-recommended": "^9",
